--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,48 @@
+# ===============================
+# Maven build output
+# ===============================
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.kotlin
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# ===============================
+# IntelliJ IDEA (REMOVE .idea)
+# ===============================
+.idea/
 *.iml
 *.ipr
+*.iws
 
-### Eclipse ###
-.apt_generated
+# ===============================
+# Eclipse
+# ===============================
 .classpath
-.factorypath
 .project
-.settings
+.settings/
+.apt_generated
+.factorypath
 .springBeans
 .sts4-cache
 
-### NetBeans ###
+# ===============================
+# NetBeans
+# ===============================
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# ===============================
+# VS Code
+# ===============================
 .vscode/
 
-### Mac OS ###
+# ===============================
+# Mac OS
+# ===============================
 .DS_Store
+
+# ===============================
+# Kotlin (safe to keep)
+# ===============================
+.kotlin
