--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,30 @@
     <artifactId>scb-login-automation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- ===================== -->
+    <!-- Java & Encoding -->
+    <!-- ===================== -->
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
 
+        <!-- ===================== -->
         <!-- Selenium -->
+        <!-- ===================== -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.39.0</version>
         </dependency>
 
-
+        <!-- ===================== -->
         <!-- TestNG -->
+        <!-- ===================== -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -34,28 +41,54 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ===================== -->
         <!-- WebDriverManager -->
+        <!-- ===================== -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>6.3.3</version>
-            <scope>test</scope>
         </dependency>
-        <!-- Apache POI for Excel -->
+
+        <!-- ===================== -->
+        <!-- Apache POI (Excel) -->
+        <!-- DO NOT add Log4j manually -->
+        <!-- ===================== -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
+
+        <!-- ===================== -->
+        <!-- SLF4J Simple (fixes warnings, safe for CI) -->
+        <!-- ===================== -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.22.1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
         </dependency>
+
     </dependencies>
 
+    <!-- ===================== -->
+    <!-- Build -->
+    <!-- ===================== -->
     <build>
         <plugins>
+
+            <!-- Compiler -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+
+            <!-- Surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -64,8 +97,12 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
+
 </project>
