--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <!-- ===================== -->
+    <!-- Basic Project Info -->
+    <!-- ===================== -->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.scb.automation</groupId>
@@ -20,20 +23,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <!-- ===================== -->
+    <!-- Dependencies -->
+    <!-- ===================== -->
     <dependencies>
 
-        <!-- ===================== -->
-        <!-- Selenium -->
-        <!-- ===================== -->
+        <!-- Selenium WebDriver -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.39.0</version>
         </dependency>
 
-        <!-- ===================== -->
         <!-- TestNG -->
-        <!-- ===================== -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -41,28 +43,35 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- ===================== -->
         <!-- WebDriverManager -->
-        <!-- ===================== -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>6.3.3</version>
         </dependency>
 
-        <!-- ===================== -->
         <!-- Apache POI (Excel) -->
-        <!-- DO NOT add Log4j manually -->
-        <!-- ===================== -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
 
-        <!-- ===================== -->
-        <!-- SLF4J Simple (fixes warnings, safe for CI) -->
-        <!-- ===================== -->
+        <!-- Extent Reports (HTML Reporting) -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
+        <!-- Apache Commons IO (Screenshots) -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+
+        <!-- SLF4J Simple (fixes CI logging warnings) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -88,14 +97,16 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire -->
+            <!-- Surefire (TestNG + Reports) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                        <suiteXmlFile>
+                            src/test/resources/testng.xml
+                        </suiteXmlFile>
                     </suiteXmlFiles>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
