Remove generated reports and screenshots from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,26 @@
-# ===============================
-# Maven build output
-# ===============================
+# =========================================================
+# Maven build output (generated during pipeline run)
+# =========================================================
 target/
 
-# ===============================
-# IntelliJ IDEA (REMOVE .idea)
-# ===============================
+# =========================================================
+# Runtime generated reports & screenshots
+# (Published as Azure Pipeline artifacts – DO NOT COMMIT)
+# =========================================================
+reports/
+screenshots/
+
+# =========================================================
+# IntelliJ IDEA
+# =========================================================
 .idea/
 *.iml
 *.ipr
 *.iws
 
-# ===============================
+# =========================================================
 # Eclipse
-# ===============================
+# =========================================================
 .classpath
 .project
 .settings/
@@ -22,9 +29,9 @@ target/
 .springBeans
 .sts4-cache
 
-# ===============================
+# =========================================================
 # NetBeans
-# ===============================
+# =========================================================
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -32,17 +39,17 @@ target/
 /.nb-gradle/
 build/
 
-# ===============================
+# =========================================================
 # VS Code
-# ===============================
+# =========================================================
 .vscode/
 
-# ===============================
+# =========================================================
 # Mac OS
-# ===============================
+# =========================================================
 .DS_Store
 
-# ===============================
+# =========================================================
 # Kotlin (safe to keep)
-# ===============================
+# =========================================================
 .kotlin
