all the latest changes and extend report genration with ss

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ build/
 # Kotlin (safe to keep)
 # =========================================================
 .kotlin
+
+# OS / temp files
+*.log
+*.tmp
